# GammaRayPlatformProbe

./: .gitignore  CMakeLists.txt  README.md
app/: AndroidManifest.xml  CMakeLists.txt  app.qrc  build.gradle  main.cpp  main.qml  qtquickcontrols2.conf
app/android/: AndroidManifest.xml
app/android/res/drawable/: splash.xml
